...
                            .fillMaxWidth()
                            .padding(vertical = 8.dp),
                        horizontalArrangement = Arrangement.SpaceBetween,
                        verticalAlignment = Alignment.CenterVertically
                    ) {
                        Text(
                            "VinylWave",
                            fontWeight = FontWeight.Bold,
                            fontSize = 24.sp
                        )
                        CircleIcon()
                    }
                },
...
                NavigationBarItem(
                    selected = selectedTab == NavigationTab.COLLECTORS,
                    onClick = { onTabSelected(NavigationTab.COLLECTORS) },
                    icon = {
                        Icon(
                            painter = painterResource(R.drawable.people_icon),
                            contentDescription = "Coleccionistas",
                            tint = if (selectedTab == NavigationTab.COLLECTORS) selectedColor else unselectedColor,
                            modifier = Modifier.size(35.dp)
                        )
                    },
                    label = {
                        Text(
...
